# Archiver-based-on-Huffman-coding-algorithm

./: BitStream.cpp  BitStream.h  CMakeLists.txt  Coder.cpp  Coder.h  Decoder.cpp  Decoder.h  Haffman.cpp  Haffman.h  HaffmanTree.cpp  HaffmanTree.h  PriorityQueue.cpp  PriorityQueue.h  README.md  main.cpp  test.cpp
